docs/release-notes/6.3.0/upgrade-guide.mdx
---
id: az8b5dvn
title: Upgrade from 6.2.x to 6.3.0
description: Learn how to upgrade Webiny from 6.2.x to 6.3.0.
---

import { Alert } from "@/components/Alert";
import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";

<Alert type="success" title="What you'll learn">

- how to upgrade Webiny from 6.2.x to 6.3.0

</Alert>

<Alert type="info">

Make sure to check out the [6.3.0 changelog](./changelog) to get familiar with the changes introduced in this release.

</Alert>

## Step-by-Step Guide

### 1. Upgrade Webiny Packages

Upgrade all Webiny packages by running the following command:

```bash
yarn webiny upgrade 6.3.0
```

Note that the command above will run upgrades for all available versions of Webiny up to 6.3.0. If there are upgrades for 6.2.1, 6.2.5, they will be ran.

You can omit the version to upgrade to the latest available:

```bash
yarn webiny upgrade
```

Add the `--debug` flag to get verbose output during the upgrade:

```bash
yarn webiny upgrade 6.3.0 --debug
```

Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **6.3.0**.

<Alert type="info">

If the above command fails or is not available in your setup, you can run the upgrade script directly via `npx`:

```bash
npx https://github.com/webiny/webiny-upgrades-v6 6.3.0 --debug
```

</Alert>

### 2. Deploy Your Project

Proceed by redeploying your Webiny project:

```bash
# Execute in your project root.
yarn webiny deploy --env {environment}
```

<AdditionalNotes />
