docs/release-notes/6.5.0/upgrade-guide.mdx
---
id: 3cwfqjzl
title: Upgrade from 6.4.x to 6.5.0
description: Learn how to upgrade Webiny from 6.4.x to 6.5.0.
---

import { Alert } from "@/components/Alert";
import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";

<Alert type="success" title="What you'll learn">

- how to upgrade Webiny from 6.4.x to 6.5.0

</Alert>

<Alert type="info">

Make sure to check out the [6.5.0 changelog](./changelog) to get familiar with the changes introduced in this release.

</Alert>

## Step-by-Step Guide

### 1. Upgrade Webiny Packages

Upgrade all Webiny packages by running the following command:

```bash
yarn webiny upgrade 6.5.0 --debug
```

Note that the command above will run upgrades for all available versions of Webiny up to 6.5.0. If there are upgrades for 6.4.1, 6.4.5, they will be ran.

You can omit the version to upgrade to the latest available:

```bash
yarn webiny upgrade --debug
```

Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **6.5.0**.

<Alert type="info">

If the above command fails or is not available in your setup, you can run the upgrade script directly via `npx`:

```bash
npx https://github.com/webiny/webiny-upgrades-v6 6.5.0 --debug
```

</Alert>

### 2. Deploy Your Project

Proceed by redeploying your Webiny project:

```bash
# Execute in your project root.
yarn webiny deploy --env {environment}
```

{/* custom-steps:start - kept when the guide is regenerated */}

### 3. Upgrade Your Next.js Frontend Packages

In your Next.js project, bump `@webiny/website-builder-nextjs` and `@webiny/sdk` to 6.5.0, so they match your Webiny version.

No code changes are needed. Your components keep working, including ones that read `mimeType`, `width`, or `height` from a file input. Crops, focal points, and alt text set in the 6.5 editor show up once your components read file inputs through `normalizeToAsset()`. See [File Inputs](./upgrade-nextjs-frontend#file-inputs).

Optionally, move to the new `@webiny/sdk-nextjs` package, which adds Headless CMS content, live preview, and content entry inputs to your frontend. [Upgrade Next.js Frontend to 6.5.0](./upgrade-nextjs-frontend) has an AI prompt for it, plus the same changes as manual steps.

<Alert type="info">

Your project keeps its existing "Website Builder" API key, which can only read Website Builder data. To use Headless CMS content, content entry inputs, or CMS live preview in your frontend, give the key read access to Headless CMS under **Settings → Access Management → API Keys**.

</Alert>

{/* custom-steps:end */}

<AdditionalNotes />
